app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: codebreaker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: app
          image: codebreaker
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
