app/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  type: LoadBalancer
  selector:
    app: web
  ports:
    - name: web
      protocol: TCP
      port: 5000
      targetPort: 5000
