app/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: app.minikube
    http:
      paths:
      - path: /app
        pathType: Prefix
        backend:
          serviceName: app
          servicePort: 8080
